# BACKUP

./: .gitignore  .gitmodules  BackupProject  CMakeLists.txt  README.md  backup_config.txt  build_script.sh
UI/: widget.cpp  widget.h
include/: BackupConfig.h  BackupManager.h  CRCValidator.h  Compressor.h  Encryptor.h  FileManager.h  HuffmanNode.h  Logger.h  Packer.h  Result.h  utils.h
src/: BackupConfig.cpp  BackupManager.cpp  CRCValidator.cpp  Compressor.cpp  Encryptor.cpp  FileManager.cpp  Logger.cpp  Packer.cpp  main.cpp
tests/: test_compressor.cpp  test_crcvalidator.cpp  test_encrypt.cpp  test_filemanager.cpp  test_huffman.cpp  test_packer.cpp  test_utils.cpp
